--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,4 +46,6 @@ workflows:
   test-build-deploy:
     jobs:
       - test_backend
-      - deploy
+      - deploy:
+          requires: 
+            - test_backend
