--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "ajv": "^6.10.2",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
+    "formidable": "^1.2.1",
+    "formidable-upload-koa": "^1.0.1",
+    "fs-extra": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
@@ -34,6 +37,7 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.1",
+    "koa2-formidable": "^1.0.2",
     "mysql2": "^2.0.1",
     "redis": "^2.8.0",
     "sequelize": "^5.21.2",
