--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "cross-env NODE_ENV=development nodemon --inspect=9229 index.js",
     "test": "NODE_ENV=test jest --runInBand --forceExit --colors",
     "lint": "eslint --ext .js .",
-    "build:ui": "rm -rf build && cd ../microblog_frontend && npm run build && cp -r build ../microblog_backend",
+    "build:ui": "rm -rf build && cd ../microblog_client && npm run build && cp -r build ../microblog_backend",
     "createdb": "./node_modules/.bin/sequelize db:create",
     "migrate": "./node_modules/.bin/sequelize db:migrate",
     "dropdb": "./node_modules/.bin/sequelize db:drop",
