--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@koa/cors": "^2.2.3",
     "ajv": "^6.10.2",
+    "date-fns": "^2.9.0",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "formidable": "^1.2.1",
