--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "createdb": "./node_modules/.bin/sequelize db:create",
     "migrate": "./node_modules/.bin/sequelize db:migrate",
     "dropdb": "./node_modules/.bin/sequelize db:drop",
-    "create_test_db": "./node_modules/.bin/sequelize db:drop --env test; ./node_modules/.bin/sequelize db:create --env test; ./node_modules/.bin/sequelize db:migrate --env test;"
+    "create_test_db": "./node_modules/.bin/sequelize db:drop --env test; ./node_modules/.bin/sequelize db:create --env test; ./node_modules/.bin/sequelize db:migrate --env test;",
+    "rbt_test": "robot -d tests/robot_tests/Results tests/robot_tests/Tests"
   },
   "author": "yumoL",
   "license": "MIT",
