--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,6 @@ jobs:
       - image: circleci/mysql:8.0.18
         environment:
           MYSQL_ROOT_PASSWORD: password
-      - image: circleci/python:3.6.2-stretch-browsers
     environment:
       DEFAULT_PICTURE: https://icon-library.net/icon/default-user-icon-14.html
       JWT_SECRET_KEY: Luan_7788$#
@@ -35,6 +34,7 @@ jobs:
             echo Failed waiting for MySQL && exit 1
       - run: npm run create_test_db
       # - run: npm test
+      - run: apt-get update && apt-get install python3.7 -y
       - run: pip install robotframework
       - run: pip install --upgrade robotframework-seleniumlibrary
       - run: npm run eeTest
