--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,8 @@ jobs:
       # - run: npm test
       - run: sudo apt-get update && sudo apt-get install python3 -y
       - run: sudo apt-get install python3-pip -y
-      - run: pip install robotframework
-      - run: pip install --upgrade robotframework-seleniumlibrary
+      - run: pip3 install robotframework
+      - run: pip3 install --upgrade robotframework-seleniumlibrary
       - run: npm run eeTest
       - run: npm run rbt_test
   migratedb:
